# DMI

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  ENGINE_MEETING_BRIEF.md  ENGINE_OVERVIEW.md  MONITORING_DEVELOPMENT.md  MONITORING_ENGINE_PLAN.md  Makefile  Quick_Start.ipynb  README.md  calc_memory.py  calc_memory_full.py  conftest.py  diagnose_monitoring_cpu.py  environment.yml  integrated.py  integrated_prefill.py  modeling_qwen3_p.py  pyproject.toml  qwen3_spec.py  requirements.txt  setup.py  test_compiled_module.py  test_cpp_backend.py  test_cpp_simple.py  test_final_integration.py  test_force_compile.py  test_gpu_mem_leak.py
.github/: dependabot.yml
.github/workflows/: ci.yml  gpu.yml  tests.yml
Benchmark/: README.md  baseline_profiler_analysis.ipynb  gpt2_hidden_state_benchmark.py
Benchmark/logs/: hs.out  hs_a.out
DEV_DOC/: AGENT.md  attention_topk_dev.md  data_pipeline_dev.md  hooks_dev.md  interfaces_config_dev.md  monitoring_engine_dev.md  mvp_monitoring_design.md  storage_index_dev.md
bak_doc/: AGENTS.md
benchmark/: bench_hf_transport.py  bench_ring_transport.py  bench_vllm_transport.py  clean_clickhouse.sh  plot_benchmark.py  plot_memory_trends.ipynb  profile_decode.py  run_batch_sizes.sh  run_bench.py  test_partition.py
benchmark/analysis/: visualize_results.ipynb
benchmark/core/: __init__.py  utils.py
benchmark/data/: openorca_prompts.txt  prompts.txt  prompts_top10.txt  prompts_top200.txt  prompts_top400.txt  prompts_top50.txt  prompts_varlen_validation.txt
benchmark/scripts/: debug_monitoring.py  hf_generate.py  hf_monitoring_generate.py  monitor_cpu_mem.py  monitor_gpu_mem.py
benchmark/tests/: PROFILE_USAGE.md  README_SIMPLIFIED_BENCHMARKS.md  __init__.py  analyze_overhead.py  analyze_overhead_scaling.py  batch_inference.py  cache_comparison.py  fix_kv_collection.py  hf_modified_async_config_benchmark.py  hf_modified_async_config_request_stride_benchmark.py  hf_modified_async_config_token_stride_benchmark.py  hf_modified_async_only.py  hf_modified_lmhead_async_only.py  hf_modified_no_cache.py  hf_modified_sync_only.py  host_engine_min_integration.py  profile_decode.py  profile_decode_qwen3.py  profile_inference.py  profile_prefill.py  profile_prefill_qwen3.py  run_safe_capacity_test.sh  test_cache_dtype.sh  test_hook_shapes.py  test_hook_shapes_v2.py  test_kv_growth.py
benchmarks/benchmark/: README.md
dev_scripts/: CONVERSATION_SUMMARY.md  diag_hookdict_graph.py  diagnose_cache.py  diagnose_graph_breaks.py  diagnose_slowdown.py  test_compile_breakdown.py  test_compile_warmup.py  test_graph_generation.py
dmx_host/: Makefile  batching_queue.py  clickhouse_client.cpp  clickhouse_client.h  dmx_interface.py  engine.py  install.md  test_clickhouse_stage.py  test_prefill.py
docs/: MonitoringEngine_Implementation_CN.md  MonitoringEngine_Refactor_Changes_CN.md  Native_Callback_Implementation_CN.md  RESTART_AUDIT_CN.md  architecture.md  benchmarks.md  config.md  huggingface.md  install.md  line1_toggle_node_briefing.md  node_toggle_design_notes.md  node_toggle_impl_plan_local.md  node_toggle_implementation.md  node_toggle_interactive.html  node_toggle_investigation_report.md  node_toggle_local_perf.md  node_toggle_mechanism_api.html  node_toggle_migration_scope.md  node_toggle_phase0_results.md  node_toggle_phase1_results.md  node_toggle_phase2_results.md  node_toggle_phase3_feasibility.md  node_toggle_phase3b_vllm_investigation.md  node_toggle_showcase.html  node_toggle_usage.md  proj-dmx_proposal.md  proj-dmx_proposal_en.md  ring2_implementation_detail.md  ring2_toggle_implementation_plan.html  ring_protocol.md  sink_delivery_completeness.md  testing.md  toggle_list_vllm_projection.html  vllm.md
docs/backup/: ENGINE_OVERVIEW.md  MONITORING_ENGINE_PLAN.md
docs/dev_log/: 12_30_2025review.md  12_31_2025.md  1_10_2026.md  1_16_2026_db_plan.md  1_17_20206.md  1_4_2026.md  1_5_2026.md  1_5_2026_bypass_overhead_analysis.md  2026_01_29_hook_list_gpt2_qwen.md  2026_01_29_host_engine_process.md  2026_02_05_native_congestion_control.md  2026_02_12_native_partial_seal_v2.md  2026_02_17_native_host_lock_hierarchy.md  (+22 more)
example/: gpt2_generate_with_monitoring_db.py
experiments/: README.md
integration/: __init__.py  hf_adapter.py  model_shape.py  vllm_adapter.py  vllm_node_toggle.py
logs/: debug.out  test.out
monitoring/: Makefile  __init__.py  _native_engine.py  adaptor_base.py  clickhouse_reader.py  config.py  engine.py  generate.py  graph_consumer.py  graph_engine.py  graph_monitor.py  graph_ops.py  hook_points.py  internal_mapper.py  monitor_native.py  monitoring  node_toggle.py  ring_transport.py  segment_merger.py  selection.py  step_context.py  task.py  utils.py  vllm_integration.py
notebooks/: overhead_analysis.ipynb  overhead_analysis.py
tests/: _requirements.py  compare_disk_vs_ch.py  compare_worker.py  e2e_matrix.py  hf_comparator.py  hf_compare_runner.py  hf_monitored_runner.py  hf_reference.py  hf_reference_runner.py  identical_vllm.sh  isolate_hook.py  numeric_study.py  ref_disk_worker.py  run_qwen2_moe_vllm_pipeline.sh  run_regression.sh  run_request_id_tests.sh  run_tp_compare.sh  run_tp_compare_hf.sh  run_tp_compare_vllm.sh  test_adapter_protocol.py  test_compiler.py  test_config.py  test_cpp_future_result.py  test_design_c_poc.py  test_e2e_correctness_vs_hf.py  test_e2e_lib.py  test_e2e_tp2.py  test_generate_with_monitoring.py  test_gpt2_parity.py  test_graph_delegate.py  test_graph_monitor.py  test_hf_adapter_dict_api.py  test_hf_eos_strip.py  test_hook_based_dual_compile.py  test_hook_spec_flags.py  test_hooked_gpt2.py  test_internal_mapper.py  test_internal_mapper_e2e.py  test_moe_v1_routing_hooks.py  test_monitoring_config.py  (+26 more)
tests_gpt2_p/: test_gpt2_parity.py
tests_monitoring/: test_config.py  test_design_c_integration.py  test_graph_consumer.py  test_graph_delegate.py  test_graph_monitor.py  test_monitoring_engine.py  test_pinned_to_pageable.py  test_wait_d2h_poc.py
tools/: repro_continuous_batch_row_mismatch.py
(+385 files in other folders)
