[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DMI"
version = "1.0.0"
description = "A decoupled, asynchronous observation substrate for high-speed LLM inference."
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
monitoring = [
    "csrc/*.cpp",    "csrc/*.h",    "csrc/*.hpp",
    "csrc/*.cu",     "csrc/*.cuh",
    "csrc/**/*.cpp", "csrc/**/*.h", "csrc/**/*.hpp",
    "csrc/**/*.cu",  "csrc/**/*.cuh",
    "Makefile",
]

[tool.setuptools.packages.find]
# `integration` without star: integration/transformers/ and integration/vllm/
# are vendored git submodules with their own pip installs. Avoiding the star
# (and the fact that those subdirs lack a top-level __init__.py) keeps the
# forks out of our wheel.
include = ["monitoring*", "benchmark*", "integration"]

[tool.pytest.ini_options]
markers = [
    "slow: tests that take more than ~30 s (per-hook isolation full sweep, large E2E sweeps); skipped by default unless `-m slow` is passed",
]
