[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DMI"
version = "1.0.0"
description = "A decoupled, asynchronous observation substrate for high-speed LLM inference."
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
monitoring = [
    "csrc/*.cpp",    "csrc/*.h",    "csrc/*.hpp",
    "csrc/*.cu",     "csrc/*.cuh",
    "csrc/**/*.cpp", "csrc/**/*.h", "csrc/**/*.hpp",
    "csrc/**/*.cu",  "csrc/**/*.cuh",
    "Makefile",
]

[tool.setuptools.packages.find]
# `integration` without star: integration/transformers/ and integration/vllm/
# are vendored git submodules with their own pip installs. Avoiding the star
# (and the fact that those subdirs lack a top-level __init__.py) keeps the
# forks out of our wheel.
include = ["monitoring*", "benchmark*", "integration"]

[tool.pytest.ini_options]
# `manual` tools and native-ring sources are not collected by default. The
# default suite is the CPU contract/unit tests:
#   python -m pytest -m "not gpu and not e2e and not manual" -q
addopts = "-ra -m 'not manual'"
norecursedirs = ["tests/tools", "tests/ring", ".venv", "integration", "build"]
markers = [
    "cpu: pure-CPU contract/unit test; the default suite (no CUDA / ClickHouse / vLLM runtime / model weights / native extension build required)",
    "gpu: requires a CUDA device",
    "multi_gpu: requires >= 2 CUDA devices (TP / EP / routing)",
    "e2e: end-to-end pipeline through the native backend + host engine",
    "clickhouse: requires a reachable ClickHouse instance",
    "vllm: requires the vLLM runtime importable",
    "hf: requires HuggingFace weights / model cache",
    "ring_native: native CUDA ring tests built via tests/ring/Makefile (needs nvcc)",
    "slow: tests that take more than ~30 s (per-hook isolation full sweep, large E2E sweeps); skipped by default unless `-m slow` is passed",
    "nightly: scheduled full-sweep tests; run in the nightly CI job via `-m \"slow or nightly\"`, not collected by default",
    "manual: investigation / tooling, not a regression gate; not collected by default",
    "numeric: per-hook numeric-difference study (drift vs the unhooked baseline)",
]
